--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -4,7 +4,7 @@ name: Deploy Backend to Cloud Run
 on:
   push:
     branches:
-      - main # Trigger on pushes to the 'main' branch
+      - main
 
 env:
   PROJECT_ID: gogo-445911 # Your GCP project ID - **Make sure this is correct for your project**
