--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -7,34 +7,34 @@ on:
       - main
 
 env:
-  PROJECT_ID: gogo-445911 # Your GCP project ID - **Make sure this is correct for your project**
+  PROJECT_ID: gogo-445911
   SERVICE_NAME: backend-service
   REGION: us-central1
-  WORKDIR: ./Server # Your backend code is located in the 'Server' subdirectory
+  WORKDIR: ./Server
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: "read"
-      id-token: "write" # Required for Workload Identity Federation (preferred for secure authentication)
+      id-token: "write"
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4 # Action to clone your repository's code
+        uses: actions/checkout@v4
 
       # Authenticate to Google Cloud using the service account key stored in GitHub Secrets
       - name: Google Cloud Authentication
         id: "auth"
         uses: "google-github-actions/auth@v2"
         with:
-          credentials_json: "${{ secrets.GCP_SA_KEY }}" # Securely retrieve your GCP Service Account Key
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
 
-      # Set up gcloud CLI, which includes commands for Cloud Run
+      # Set up gcloud CLI
       - name: Set up gcloud SDK
         uses: "google-github-actions/setup-gcloud@v2"
 
-      # Deploy the backend service to Cloud Run
+      # Backend deployment
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy ${{ env.SERVICE_NAME }} \
